--- a/kb/index.html
+++ b/kb/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet"/>
+    <link id="favicon" rel="icon" href="https://Bixic-org.github.io/Logo_Bixic.png">
   </head>
   <body onload="bodyOnload()">
     <h1>オ゛ェｼﾞｭルニョェーッ語キーボード (β)</h1>
