--- a/kb/index.html
+++ b/kb/index.html
@@ -7,139 +7,152 @@
     <link href="main.css" rel="stylesheet"/>
     <link id="favicon" rel="icon" href="https://Bixic-org.github.io/Logo_Bixic.png">
   </head>
+
   <body onload="bodyOnload()">
-    <h1>オ゛ェｼﾞｭルニョェーッ語キーボード (β)</h1>
-    <div id="intro">
-      <p><u>※きちんとした動作確認はまだ行っておりませんのでご了承ください。</u></p>
-      <p>オ゛ェｼﾞｭルニョェーッ語の第二正書法・羅字転写(ラテン文字転写)・IPA<!-- ・㐎字転写 -->を出力するツールです。入力は第二正書法と羅字転写に対応しています。</p>
-    </div>
-    <div id="main">
-      <b>入力：</b>
-      <textarea id="txt-input" class="txtbox" lang="ru" onkeydown="convert();" onkeyup="convert();" onchange="convert();"></textarea>
-      <div id="operation-box">
-        出力種別：
-        <select id="select-output-type" class="dropdn" name="select-output-type" title="出力の種類" onchange="convert();inputboxFocus();">
-          <option value="2nd-ortho" selected>第二正書法</option>
-          <option value="ltn-trans">羅字転写</option>
-          <option value="ltn-trans-reversible">羅字転写(長母音f型)</option>
-          <option value="ipa">IPA</option>
-          <!-- <option value="gulja">㐎字転写法</option> -->
-        </select>
-        <span style="opacity: 0.8; font-size: 1.2em;">｜</span>
-        <button id="copy-res" title="出力結果をクリップボードにコピー" type="button" onclick="copyVal();">結果コピー <span class="far fa-clipboard"><!-- クリップボード --></span></button>
+    <div id="main-content">
+      <h1>オ゛ェｼﾞｭルニョェーッ語キーボード (β)</h1>
+      <div id="intro">
+        <p><u>※きちんとした動作確認はまだ行っておりませんのでご了承ください。</u></p>
+        <p>オ゛ェｼﾞｭルニョェーッ語の第二正書法・羅字転写(ラテン文字転写)・IPA<!-- ・㐎字転写 -->を出力するツールです。入力は第二正書法と羅字転写に対応しています。</p>
       </div>
-      <b>出力：</b>
-      <textarea id="txt-output" class="txtbox" lang="ru" readonly></textarea>
-    </div>
-    <h2>使い方</h2>
-    <ul>
-      <li>〈羅字転写(長母音f型)〉では、長母音を短母音+fで出力します。</li>
-      <li>「<span lang="ru">'</span>」が先頭に来る際の大文字化規則は自動で処理します。</li>
-      <li>変換対象外の文字は無視してそのまま出力されますのでご注意ください。</li>
-      <!-- <li><span class="pre">\</span>（バックスラッシュ）を用いたエスケープもできます。</li> ←そのうちやりたいという願望 -->
-      <li>あとは適当にいじってみてください。大体分かります。</li>
-    </ul>
-    <h2>音字対応表</h2>
-    <div id="char-doc">
-      <div id="char-list">
-        <table lang="ru">
-          <tr>
-            <td>第二<br/>正書法</td><td>発音</td>
-            <td>第二<br/>正書法</td><td>発音</td><td>羅字転写</td>
-          </tr>
-          <tr>
-            <td>Aa</td><td>[ɶ]</td>
-            <td>Vv</td><td>[ⱱ]</td><td></td>
-          </tr>
-          <tr>
-            <td>Bb</td><td>[ʙ]</td>
-            <td>Ww</td><td>[ɰ]</td><td></td>
-          </tr>
-          <tr>
-            <td>Cc</td><td>[c]</td>
-            <td>Xx</td><td>[x]</td><td></td>
-          </tr>
-          <tr>
-            <td>Dd</td><td>[ɖ]</td>
-            <td>Yy</td><td>[ɥ]</td><td></td>
-          </tr>
-          <tr>
-            <td>Ee</td><td>[ø]</td>
-            <td>Zz</td><td>[ɮ]</td><td></td>
-          </tr>
-          <tr>
-            <td>Gg</td><td>[ɢ]</td>
-            <td>Бб</td><td>[d̼]</td><td><span class="pre">dm</span></td>
-          </tr>
-          <tr>
-            <td>Hh</td><td>[ħ]</td>
-            <td>Гг</td><td>[ð̼]</td><td><span class="pre">zm</span></td>
-          </tr>
-          <tr>
-            <td>Ii</td><td>[y]</td>
-            <td>Дд</td><td>[tʼ]</td><td><span class="pre">tf</span></td>
-          </tr>
-          <tr>
-            <td>Kk</td><td>[q]</td>
-            <td>Жж</td><td>[ʐ]</td><td><span class="pre">zj</span></td>
-          </tr>
-          <tr>
-            <td>Ll</td><td>[ʁ]</td>
-            <td>Мм</td><td>[n̼]</td><td><span class="pre">nm</span></td>
-          </tr>
-          <tr>
-            <td>Nn</td><td>[ɳ]</td>
-            <td>Пп</td><td>[t̼]</td><td><span class="pre">tm</span></td>
-          </tr>
-          <tr>
-            <td>Oo</td><td>[ɤ]</td>
-            <td>Фф</td><td>[θ̼]</td><td><span class="pre">sm</span></td>
-          </tr>
-          <tr>
-            <td>Pp</td><td>[ʙ̥]</td>
-            <td>Чч</td><td>[t͡ɬʼ]</td><td><span class="pre">sf</span></td>
-          </tr>
-          <tr>
-            <td>Qq</td><td>[ɟ]</td>
-            <td>Шш</td><td>[ʂ]</td><td><span class="pre">sj</span></td>
-          </tr>
-          <tr>
-            <td>Rr</td><td>[r]</td>
-            <td>Ъъ</td><td>[qʼ]</td><td><span class="pre">kf</span></td>
-          </tr>
-          <tr>
-            <td>Ss</td><td>[ɬ]</td>
-            <td>Ƣƣ</td><td>[ʕ]</td><td><span class="pre">ff</span></td>
-          </tr>
-          <tr>
-            <td>Tt</td><td>[ʈ]</td>
-            <td>'</td><td>[ʔ]</td><td><span class="pre">hf</span></td>
-          </tr>
-            <td>Uu</td><td>[ɯ]</td>
-          <tr>
-          </tr>
-        </table>
+
+      <div id="main">
+        <b>入力：</b>
+        <textarea id="txt-input" class="txtbox" lang="ru" onkeydown="convert();" onkeyup="convert();" onchange="convert();"></textarea>
+        <div id="operation-box">
+          出力種別：
+          <select id="select-output-type" class="dropdn" name="select-output-type" title="出力の種類" onchange="convert();inputboxFocus();">
+            <option value="2nd-ortho" selected>第二正書法</option>
+            <option value="ltn-trans">羅字転写</option>
+            <option value="ltn-trans-reversible">羅字転写(長母音f型)</option>
+            <option value="ipa">IPA</option>
+            <!-- <option value="gulja">㐎字転写法</option> -->
+          </select>
+          <span style="opacity: 0.8; font-size: 1.2em;">｜</span>
+          <button id="copy-res" title="出力結果をクリップボードにコピー" type="button" onclick="copyVal();">結果コピー <span class="far fa-clipboard"><!-- クリップボード --></span></button>
+        </div>
+        <b>出力：</b>
+        <textarea id="txt-output" class="txtbox" lang="ru" readonly></textarea>
       </div>
-      <div id="char-note">
-        <ul>
-          <li>「<a href="https://ja.wikipedia.org/wiki/Ƣ" title="Ƣ - Wikipedia"><span lang="ru">Ƣ, ƣ</span></a>」は、ラテン文字で gha と呼ばれる。</li>
-          <li>長母音は短母音に<a href="https://ja.wikipedia.org/wiki/マクロン" title="マクロン - Wikipedia">マクロン</a>を付加して表す（<span lang="ru">ā, ē, ī, ō, ū</span>）。ラテン転写時には通常同じ母音を重ねて表現するが、一意に逆変換する必要がある際には「母音 + <span class="pre">f</span>」で表すことがある。</li>
-          <li>文頭や固有名詞の頭文字は大文字となるが、1文字目が「<span lang="ru">'</span>」である場合は代わりに2文字目を大文字とする。</li>
-        </ul>
+
+      <h2>使い方</h2>
+      <ul>
+        <li>〈羅字転写(長母音f型)〉では、長母音を短母音+fで出力します。</li>
+        <li>「<span lang="ru">'</span>」が先頭に来る際の大文字化規則は自動で処理します。</li>
+        <li>変換対象外の文字は無視してそのまま出力されますのでご注意ください。</li>
+        <!-- <li><span class="pre">\</span>（バックスラッシュ）を用いたエスケープもできます。</li> ←そのうちやりたいという願望 -->
+        <li>あとは適当にいじってみてください。大体分かります。</li>
+      </ul>
+
+      <h2>音字対応表</h2>
+      <div id="char-doc">
+        <div id="char-list">
+          <table lang="ru">
+            <tr>
+              <td>第二<br/>正書法</td><td>発音</td>
+              <td>第二<br/>正書法</td><td>発音</td><td>羅字転写</td>
+            </tr>
+            <tr>
+              <td>Aa</td><td>[ɶ]</td>
+              <td>Vv</td><td>[ⱱ]</td><td></td>
+            </tr>
+            <tr>
+              <td>Bb</td><td>[ʙ]</td>
+              <td>Ww</td><td>[ɰ]</td><td></td>
+            </tr>
+            <tr>
+              <td>Cc</td><td>[c]</td>
+              <td>Xx</td><td>[x]</td><td></td>
+            </tr>
+            <tr>
+              <td>Dd</td><td>[ɖ]</td>
+              <td>Yy</td><td>[ɥ]</td><td></td>
+            </tr>
+            <tr>
+              <td>Ee</td><td>[ø]</td>
+              <td>Zz</td><td>[ɮ]</td><td></td>
+            </tr>
+            <tr>
+              <td>Gg</td><td>[ɢ]</td>
+              <td>Бб</td><td>[d̼]</td><td><span class="pre">dm</span></td>
+            </tr>
+            <tr>
+              <td>Hh</td><td>[ħ]</td>
+              <td>Гг</td><td>[ð̼]</td><td><span class="pre">zm</span></td>
+            </tr>
+            <tr>
+              <td>Ii</td><td>[y]</td>
+              <td>Дд</td><td>[tʼ]</td><td><span class="pre">tf</span></td>
+            </tr>
+            <tr>
+              <td>Kk</td><td>[q]</td>
+              <td>Жж</td><td>[ʐ]</td><td><span class="pre">zj</span></td>
+            </tr>
+            <tr>
+              <td>Ll</td><td>[ʁ]</td>
+              <td>Мм</td><td>[n̼]</td><td><span class="pre">nm</span></td>
+            </tr>
+            <tr>
+              <td>Nn</td><td>[ɳ]</td>
+              <td>Пп</td><td>[t̼]</td><td><span class="pre">tm</span></td>
+            </tr>
+            <tr>
+              <td>Oo</td><td>[ɤ]</td>
+              <td>Фф</td><td>[θ̼]</td><td><span class="pre">sm</span></td>
+            </tr>
+            <tr>
+              <td>Pp</td><td>[ʙ̥]</td>
+              <td>Чч</td><td>[t͡ɬʼ]</td><td><span class="pre">sf</span></td>
+            </tr>
+            <tr>
+              <td>Qq</td><td>[ɟ]</td>
+              <td>Шш</td><td>[ʂ]</td><td><span class="pre">sj</span></td>
+            </tr>
+            <tr>
+              <td>Rr</td><td>[r]</td>
+              <td>Ъъ</td><td>[qʼ]</td><td><span class="pre">kf</span></td>
+            </tr>
+            <tr>
+              <td>Ss</td><td>[ɬ]</td>
+              <td>Ƣƣ</td><td>[ʕ]</td><td><span class="pre">ff</span></td>
+            </tr>
+            <tr>
+              <td>Tt</td><td>[ʈ]</td>
+              <td>'</td><td>[ʔ]</td><td><span class="pre">hf</span></td>
+            </tr>
+              <td>Uu</td><td>[ɯ]</td>
+            <tr>
+            </tr>
+          </table>
+        </div>
+        <div id="char-note">
+          <ul>
+            <li>「<a href="https://ja.wikipedia.org/wiki/Ƣ" title="Ƣ - Wikipedia"><span lang="ru">Ƣ, ƣ</span></a>」は、ラテン文字で gha と呼ばれる。</li>
+            <li>長母音は短母音に<a href="https://ja.wikipedia.org/wiki/マクロン" title="マクロン - Wikipedia">マクロン</a>を付加して表す（<span lang="ru">ā, ē, ī, ō, ū</span>）。ラテン転写時には通常同じ母音を重ねて表現するが、一意に逆変換する必要がある際には「母音 + <span class="pre">f</span>」で表すことがある。</li>
+            <li>文頭や固有名詞の頭文字は大文字となるが、1文字目が「<span lang="ru">'</span>」である場合は代わりに2文字目を大文字とする。</li>
+          </ul>
+        </div>
       </div>
+
+      <div style="clear: both;"></div>
+      <h2>Q&A</h2>
+      <p>Q.　動作しないんですが？<br/><!--
+      -->A.　JavaScript は有効ですか？お使いのブラウザは最新ですか？色々なブラウザを試しましたか？<s>（質問に質問で返すな）</s></p>
+      <p>Q.　出力がされない［途中で止まる］んですが？／出力結果・文字一覧が間違っていますよ［文字化けしますよ］？<br/><!--
+      -->A.　申し訳ございません！　Twitter（<a href="https://twitter.com/xirdim" title="@xirdim - Twitter">@xirdim</a>）か、その他 Discord サーバ等で Xirdim までお知らせください。</p>
+      <p>Q.　使いづらいよ。／この機能つけて。<br/><!--
+      -->A.　上記の方法で連絡もらえれば、解決するかもしれませんし、しないかもしれません。</p>
+      <p>Q.　ソースが汚いよ。<br/><!--
+      -->A.　ごめんね。</p>
+      <p>Q.　再配布したいな。<br/><!--
+      -->A.　いやです。</p>
     </div>
-    <div style="clear: both;"></div>
-    <h2>Q&A</h2>
-    <p>Q.　動作しないんですが？<br/><!--
-    -->A.　JavaScript は有効ですか？お使いのブラウザは最新ですか？色々なブラウザを試しましたか？<s>（質問に質問で返すな）</s></p>
-    <p>Q.　出力がされない［途中で止まる］んですが？／出力結果・文字一覧が間違っていますよ［文字化けしますよ］？<br/><!--
-    -->A.　申し訳ございません！　Twitter（<a href="https://twitter.com/xirdim" title="@xirdim - Twitter">@xirdim</a>）か、その他 Discord サーバ等で Xirdim までお知らせください。</p>
-    <p>Q.　使いづらいよ。／この機能つけて。<br/><!--
-    -->A.　上記の方法で連絡もらえれば、解決するかもしれませんし、しないかもしれません。</p>
-    <p>Q.　ソースが醜い。<br/><!--
-    -->A.　しらん。</p>
-    <p>Q.　再配布したい。<br/><!--
-    -->A.　やだよ。</p>
+
+    <div id="footer">
+        <span class="fab fa-github github-icon" style="font-size: 1.2em;"></span>
+        <a href="https://github.com/Bixic-org/affr" target="_blank">View on GitHub</a>
+    </div>
+
     <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
