--- a/kb/index.html
+++ b/kb/index.html
@@ -25,7 +25,8 @@
             <option value="2nd-ortho" selected>第二正書法</option>
             <option value="ltn-trans">羅字転写</option>
             <option value="ltn-trans-reversible">羅字転写(長母音f型)</option>
-            <option value="ipa">IPA</option>
+            <option value="ipa">IPA(音素)</option>
+            <option value="ipa-phonetic">IPA(音声)</option>
             <!-- <option value="gulja">㐎字転写法</option> -->
           </select>
           <span style="opacity: 0.8; font-size: 1.2em;">｜</span>
@@ -37,7 +38,7 @@
 
       <h2>使い方</h2>
       <ul>
-        <li>〈羅字転写(長母音f型)〉では、長母音を短母音+fで出力します。</li>
+        <li>[羅字転写(長母音f型)] では、長母音 を 短母音+f で出力します。</li>
         <li>「<span lang="ru">'</span>」が先頭に来る際の大文字化規則は自動で処理します。</li>
         <li>変換対象外の文字は無視してそのまま出力されますのでご注意ください。</li>
         <!-- <li><span class="pre">\</span>（バックスラッシュ）を用いたエスケープもできます。</li> ←そのうちやりたいという願望 -->
