--- a/kb/index.html
+++ b/kb/index.html
@@ -13,7 +13,7 @@
       <h1>オ゛ェｼﾞｭルニョェーッ語キーボード (β)</h1>
       <div id="intro">
         <p><u>※きちんとした動作確認はまだ行っておりませんのでご了承ください。</u></p>
-        <p>オ゛ェｼﾞｭルニョェーッ語の第二正書法・羅字転写(ラテン文字転写)・IPA<!-- ・㐎字転写 -->を出力するツールです。入力は第二正書法と羅字転写に対応しています。</p>
+        <p>オ゛ェｼﾞｭルニョェーッ語の各種表記を相互変換するツールです。<a href="#how-to-use">使い方は以下を参照してください</a>。</p>
       </div>
 
       <div id="main">
@@ -36,16 +36,24 @@
         <textarea id="txt-output" class="txtbox" lang="ru" readonly></textarea>
       </div>
 
-      <h2>使い方</h2>
+      <h2 id="how-to-use">使い方</h2>
       <ul>
-        <li>[羅字転写(長母音f型)] では、長母音 を 短母音+f で出力します。</li>
+        <li>入力は第二正書法と羅字転写に対応しています。</li>
+        <li>出力する形式は、中央の [出力種別] から選択してください。
+          <ul>
+            <li>第二正書法、ラテン文字転写(=羅字転写)、IPAの音素表記と音声表記<!-- 、㐎字転写 -->に対応しています。</li>
+            <li>[羅字転写(長母音f型)] では、長母音 を 短母音+f で出力します。</li>
+            <li>[IPA(音素)] では、以下に示す<a href="#pronunciation">音字対応表</a>のとおりに音素で表記します（詳細は後述）。</li>
+            <li>[IPA(音声)] では、オ゛ェｼﾞｭルニョェーッ語首都方言に基づいた実際の発音変化を反映します（<a href="#phonetic">後述</a>）。</li>
+          </ul>
+        </li>
         <li>「<span lang="ru">'</span>」が先頭に来る際の大文字化規則は自動で処理します。</li>
         <li>変換対象外の文字は無視してそのまま出力されますのでご注意ください。</li>
         <!-- <li><span class="pre">\</span>（バックスラッシュ）を用いたエスケープもできます。</li> ←そのうちやりたいという願望 -->
-        <li>あとは適当にいじってみてください。大体分かります。</li>
+        <li>[結果コピー] ボタンにより、出力結果をクリップボードにコピーします。</li>
       </ul>
 
-      <h2>音字対応表</h2>
+      <h2 id="pronunciation">オ゛ェｼﾞｭルニョェーッ語の発音について</h2>
       <div id="char-doc">
         <div id="char-list">
           <table lang="ru">
@@ -127,22 +135,28 @@
           </table>
         </div>
         <div id="char-note">
+          <h3>表記について</h3>
           <ul>
             <li>「<a href="https://ja.wikipedia.org/wiki/Ƣ" title="Ƣ - Wikipedia"><span lang="ru">Ƣ, ƣ</span></a>」は、ラテン文字で gha と呼ばれる。</li>
             <li>長母音は短母音に<a href="https://ja.wikipedia.org/wiki/マクロン" title="マクロン - Wikipedia">マクロン</a>を付加して表す（<span lang="ru">ā, ē, ī, ō, ū</span>）。ラテン転写時には通常同じ母音を重ねて表現するが、一意に逆変換する必要がある際には「母音 + <span class="pre">f</span>」で表すことがある。</li>
             <li>文頭や固有名詞の頭文字は大文字となるが、1文字目が「<span lang="ru">'</span>」である場合は代わりに2文字目を大文字とする。</li>
           </ul>
+          <h3 id="phonetic">音声について</h3>
+          <ul>
+            <li>s /ɬ/, z /ɮ/ がそり舌音と隣り合う場合は、それぞれ [ɭ̊˔], [ɭ˔] とそり舌化します。</li>
+            <li>破裂音と摩擦音が続く場合は、破擦音とみなします（出力時にタイで結ばれます：ʈ͡ʂ のように）。</li>
+          </ul>
         </div>
       </div>
 
       <div style="clear: both;"></div>
-      <h2>Q&A</h2>
+      <h2>FAQ</h2>
       <p>Q.　動作しないんですが？<br/><!--
       -->A.　JavaScript は有効ですか？お使いのブラウザは最新ですか？色々なブラウザを試しましたか？<s>（質問に質問で返すな）</s></p>
-      <p>Q.　出力がされない［途中で止まる］んですが？／出力結果・文字一覧が間違っていますよ［文字化けしますよ］？<br/><!--
+      <p>Q.　出力がされない［途中で止まる］んですが？／出力結果・文字一覧がおかしいんですが？<br/><!--
       -->A.　申し訳ございません！　Twitter（<a href="https://twitter.com/xirdim" title="@xirdim - Twitter">@xirdim</a>）か、その他 Discord サーバ等で Xirdim までお知らせください。</p>
       <p>Q.　使いづらいよ。／この機能つけて。<br/><!--
-      -->A.　上記の方法で連絡もらえれば、解決するかもしれませんし、しないかもしれません。</p>
+      -->A.　上記の方法で連絡もらえれば、なるべく解決に努めます。</p>
       <p>Q.　ソースが汚いよ。<br/><!--
       -->A.　ごめんね。</p>
       <p>Q.　再配布したいな。<br/><!--
