#4 への対応 (そり舌音 + ч の IPA 音声表記)

--- a/kb/index.html
+++ b/kb/index.html
@@ -12,7 +12,7 @@
     <div id="main-content">
       <h1>オ゛ェｼﾞｭルニョェーッ語キーボード (β)</h1>
       <div id="intro">
-        <p><u>※きちんとした動作確認はまだ行っておりませんのでご了承ください。</u></p>
+        <p><u>※きちんとした動作確認はまだ行っておりませんのでご注意ください。</u></p>
         <p>オ゛ェｼﾞｭルニョェーッ語の各種表記を相互変換するツールです。<a href="#how-to-use">使い方は以下を参照してください</a>。</p>
       </div>
 
@@ -144,7 +144,7 @@
           <h3 id="phonetic">音声について</h3>
           <ul>
             <li>s /ɬ/, z /ɮ/ がそり舌音と隣り合う場合は、それぞれ [ɭ̊˔], [ɭ˔] とそり舌化します。</li>
-            <li>破裂音と摩擦音が続く場合は、破擦音とみなします（出力時にタイで結ばれます：ʈ͡ʂ のように）。</li>
+            <li>破裂音と摩擦音が続く場合は、破擦音とみなします（出力時にはタイで結ばれます：ʈ͡ʂ のように）。</li>
           </ul>
         </div>
       </div>
