オエル語発音についての説明書きの更新

--- a/kb/index.html
+++ b/kb/index.html
@@ -143,7 +143,7 @@
           </ul>
           <h3 id="phonetic">音声について</h3>
           <ul>
-            <li>s /ɬ/, z /ɮ/ がそり舌音と隣り合う場合は、それぞれ [ɭ̊˔], [ɭ˔] とそり舌化します。</li>
+            <li>s /ɬ/, z /ɮ/, ч /t͡ɬʼ/ がそり舌音と隣り合う場合は、それぞれ [ɭ̊˔], [ɭ˔], [ʈ͡ɭ̊˔ʼ] とそり舌化します。</li>
             <li>破裂音と摩擦音が続く場合は、破擦音とみなします（出力時にはタイで結ばれます：ʈ͡ʂ のように）。</li>
           </ul>
         </div>
